--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,8 +24,8 @@ jobs:
       matrix:
         include:
           #  两行一组，删除不需要的版本
-          - platform: ds1621p
-            version: 7.0.1-42218
+          - platform: ds3617xs
+            version: 7.1.0-42661
 
     steps:
       - name: 检出项目文件
